feat(diaryProfiles): update DiaryProfileApi
- add findAllById in DiaryProfileApi
- implement findAllById in DiaryProfileServices with policy
- add ensureCanGetAll method in DiaryProfilePolicy